--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<html>
-    <head>
-
-    </head>
-    <body>
-        <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
-</body>
-</html>
+<html><body><h1>My First Heading</h1><p>My first paragraph.</p></body></html>
