--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<html><body><h1>My First Heading</h1><p>My first paragraph.</p></body></html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>this is a title</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <p>This is a video.</p>
+    <video src="https://github.com/Auto19/RickRoll/blob/master/ved.mp4?raw=true" autoplay muted>
+  </body>
+</html>
