--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
     <title>this is a title</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <p>This is a video.</p>
-    <video src="https://github.com/Auto19/RickRoll/blob/master/ved.mp4?raw=true" autoplay muted>
+    <p>This is a test</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat sed cras ornare arcu dui. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus. Dignissim diam quis enim lobortis scelerisque. A erat nam at lectus urna duis convallis convallis tellus. Sagittis eu volutpat odio facilisis mauris sit. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare. Ac ut consequat semper viverra nam. Nullam non nisi est sit amet facilisis magna etiam. Scelerisque mauris pellentesque pulvinar pellentesque habitant. Turpis egestas integer eget aliquet nibh praesent tristique. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Gravida arcu ac tortor dignissim. Mattis ullamcorper velit sed ullamcorper. Penatibus et magnis dis parturient montes nascetur ridiculus mus mauris.</p>
+    <p>text \n text \n hi</p>
   </body>
 </html>
